--- a/style.css
+++ b/style.css
@@ -1,2 +1,59 @@
 /*Work sens fonts from google font*/
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Open+Sans:wght@400;700&family=Work+Sans:ital,wght@0,400;0,500;0,700;0,800;1,600&display=swap');
+* {
+   font-family: 'Work Sans', sans-serif;
+}
+.btn-primary {
+    color: #FFF;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 600;
+    border-radius: 8px;
+    background: #FF900E;
+    padding: 20px 25px;
+    border:none;
+}
+/*style header section*/
+header {
+    background: rgba(255, 144, 14, 0.10);
+    padding: 50px 240px;
+}
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.nav-title {
+    font-size: 3rem;
+    font-weight: 700;
+    color: #131313;
+}
+nav > ul {
+    display: flex;
+}
+nav li {
+    list-style-type: none;
+    margin-right: 30px;
+    font-weight: 500;
+    font-size: 1rem;
+}
+nav li a {
+    text-decoration: none;
+color:#424242;
+}
+/*style banner*/
+.banner-content {
+    text-align: center;
+    max-width: 800px;
+    margin: 0 auto;
+}
+.banner-title {
+    color: #131313;
+    font-size: 4rem;
+    font-weight: 700;
+}
+.banner-desc {
+    color: #727272;
+    font-weight: 400;
+    font-size: 1rem;
+}
