--- a/style.css
+++ b/style.css
@@ -1,7 +1,14 @@
 /*Work sens fonts from google font*/
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Open+Sans:wght@400;700&family=Work+Sans:ital,wght@0,400;0,500;0,700;0,800;1,600&display=swap');
+/*share style*/
 * {
    font-family: 'Work Sans', sans-serif;
+}
+.text-light-gray {
+    color: #727272;
+    font-size: 16px;
+    font-weight: 400;
+
 }
 .btn-primary {
     color: #FFF;
@@ -12,6 +19,11 @@
     background: #FF900E;
     padding: 20px 25px;
     border:none;
+}
+.repeat-h3 {
+    color: #131313;
+    font-size: 45px;
+    font-weight: 700;
 }
 /*style header section*/
 header {
@@ -61,6 +73,43 @@ nav li a {
     margin-top: 20px;
     width: 100%;
 }
+
+/*main section style start*/
+main {
+    max-width: 1440px;
+    margin: 70px auto;
+}
+/*teams style*/
+.teams-container {
+    display: flex;
+    align-items: center;
+}
+.teams-img-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap:1.5rem;
+}
+.teams-content {
+    padding-right: 75px;
+    padding-left: 75px;
+}
+.teams-title {
+    font-size: 2.7rem;
+}
+.q-list {
+    color:#727272;
+    font-weight: 500;
+}
+.Features {
+    color:#FF900E;
+    font-weight: 700;
+}
+.teams-desc {
+    font-size: 1rem;
+    font-weight: 400;
+    color: #727272;
+}
+
 /*responsive media quary */
 /*mobile device*/
 @media screen and (max-width: 576px) {
@@ -70,6 +119,17 @@ nav li a {
     nav {
         flex-direction: column;
     }
+    .teams-container {
+        flex-direction: column;
+    }
+    .teams-img-container {
+        grid-template-columns: 1fr;
+        padding-right: 1rem;
+        padding-left: 1rem;
+    }
+    .teams-content {
+        padding: 20px;
+    }
 }
 /*tablet or medium device*/
 @media  screen and (min-width: 576px) and (max-width: 960px) {
@@ -78,5 +138,12 @@ nav li a {
     }
     header {
         padding: 20px;
+    }
+    .teams-container {
+        flex-direction: column;
+    }
+    .teams-content {
+        padding-right: 5px;
+        padding-left:  5px;
     }
 }
