--- a/style.css
+++ b/style.css
@@ -110,6 +110,29 @@ main {
     color: #727272;
 }
 
+/*fact style*/
+.fact-card-container {
+    display: flex;
+    justify-content: space-around;
+}
+.fact-card-container .card {
+    border-radius: 8px;
+    border: 1px solid #FF900E;
+    text-align: center;
+    font-size: 2.8rem;
+    padding: 30px 30px;
+}
+.fact-card-container .card-stats {
+    font-size:45px;
+    color: #424242;
+    margin-bottom: 10px;
+    margin-top: 0px;
+}
+.fact-card-container .card-title {
+    font-size: 20px;
+    margin: 0px;
+}
+
 /*responsive media quary */
 /*mobile device*/
 @media screen and (max-width: 576px) {
@@ -130,9 +153,12 @@ main {
     .teams-content {
         padding: 20px;
     }
+    .fact-card-container {
+        flex-direction: column;
+    }
 }
 /*tablet or medium device*/
-@media  screen and (min-width: 576px) and (max-width: 960px) {
+@media  screen and (min-width: 576px) and (max-width: 990px) {
     nav {
         flex-direction: column;
     }
@@ -146,4 +172,5 @@ main {
         padding-right: 5px;
         padding-left:  5px;
     }
+
 }
